# wire_manipulator

./: .gitignore  guide
.claude/: settings.json
manipulator_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
manipulator_description/meshes/: base_link.stl  guide1_1.stl  guide2_1.stl  lower_link1_1.stl  lower_link2_1.stl  upper_link1_1.stl  upper_link2_1.stl  wheel_bl_1.stl  wheel_br_1.stl  wheel_fl_1.stl  wheel_fr_1.stl  yaw_link_1.stl
manipulator_description/urdf/: manipulator.gazebo  manipulator.trans  manipulator.urdf  manipulator.xacro  materials.xacro
manipulator_motor_description/: CMakeLists.txt  package.xml
manipulator_motor_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
manipulator_motor_description/meshes/: base_link.stl  guide1_1.stl  guide2_1.stl  lower_link1_1.stl  lower_link2_1.stl  upper_link1_1.stl  upper_link2_1.stl  wheel_bl_1.stl  wheel_br_1.stl  wheel_fl_1.stl  wheel_fr_1.stl
manipulator_motor_description/urdf/: manipulator_motor.gazebo  manipulator_motor.trans  manipulator_motor.urdf  manipulator_motor.xacro  materials.xacro
robot-control/: CMakeLists.txt  deps  robot_control.cpp  robot_simul.cpp  run_control.sh  run_simul.sh
robot-control/config/: fastdds_udp_only.xml  robotnl.yaml
robot-control/mjcf/: manipulator.xml  robot_nl_pre.xml
robot-control/mjcf/assets/robotnl_meshes/: left_ankle.stl  right_foot.stl  right_yaw.stl
robot-control/policy/: policy47_2.pt  policy47_4.pt  policy47_5.pt  policy_pre.pt  policy_stand1.pt  policy_stand3.pt
robot-control/tasks/: ankle.hpp  custom_types.hpp  data_logger.hpp  joystick.h  kin_2rsu.hpp  kin_manipulator.hpp  manager.hpp  motor_test5.cpp  mujoco_env.hpp  policy_runner.cpp  policy_runner.hpp  ros2_bridge_task.hpp  safety_layer.hpp  util.hpp
robot-control/tasks/driver/: can_bus0.h  can_bus1.h  can_bus2.h  motor.impl.hpp
robot-control/tasks/ws_server/: ws_bridge.cpp  ws_bridge.hpp  ws_bridge_task.hpp
robot-monitor/: index.html  package-lock.json  package.json
robot-monitor/public/robot/: robot.urdf
robot-monitor/public/robot/meshes/: left_yaw_1_1_1.stl  right_ankle_1_1_1.stl  right_foot_1_1_1.stl
robot-monitor/src/: App.css  App.tsx  App.tsx.txt  types.ts
robot-monitor/src/components/: RobotScene.tsx  UrdfRobot.tsx
robot-monitor/src/hooks/: useRobotWs.ts
robot-monitor/src/types/: three-urdf-loader.d.ts
src/msg_interfaces/: CMakeLists.txt  package.xml
src/msg_interfaces/msg/: Action.msg  Imudata.msg  Imudata2.msg  Joymsg.msg  Obs.msg  Observation.msg  Test.msg
src/mujoco_rl/: CMakeLists.txt  package.xml
src/mujoco_rl/config/: robotnl.yaml  robotnl_pre.yaml
src/mujoco_rl/launch/: cpp_rl_launch.py  mujoco_launch.py
src/mujoco_rl/mjcf/: robot_nl.xml
src/mujoco_rl/mjcf/assets/robotnl_meshes/: left_upper_link.stl  right_lower_link.stl  right_upper_link.stl
src/mujoco_rl/policy/: policy47_3.pt  policy47_6.pt  policy_stand2.pt
src/mujoco_rl/policy/policy47_7/exported/: policy.pt
src/mujoco_rl/policy/policy47_7/params/: env.pkl
src/mujoco_rl/policy/policy_stand3/params/: agent.yaml  env.pkl
src/mujoco_rl/src/: controller_test.py  joy_sub_test.py  mujoco_ros1.cpp  mujoco_ros2.cpp  mujoco_ros3.cpp  mujoco_ros4.cpp  mujoco_ros5.cpp  mujoco_ros6.cpp  mujoco_ros_code.py  policy_ros_code.py  policy_runner1.cpp  policy_runner2.cpp  policy_runner3.cpp  pttest.cpp  test_code.py
src/rlcode/: CMakeLists.txt  package.xml
src/rlcode/config/: robotnl.yaml
src/rlcode/launch/: rl_mujoco_launch.py  rviz_launch.py
src/rlcode/mjcf/assets/robotnl_meshes/: left_foot.stl  right_ankle.stl
src/rlcode/policy/: policy47_1.pt  policy47_7.pt  policy_pre.onnx
src/rlcode/policy/policy47_7/exported/: policy.onnx
src/rlcode/policy/policy47_7/params/: agent.pkl  env.yaml
src/rlcode/policy/policy_stand3/exported/: policy.onnx
src/rlcode/policy/policy_stand3/params/: env.yaml
src/rlcode/rviz/: robot_ik.rviz
src/rlcode/src/: controller.py  controller1.py  imu_test1.cpp  imu_test2.cpp  imu_test3.cpp  imu_test4.cpp  motor_test1.cpp  motor_test2 copy.cpp  motor_test2.cpp  motor_test3.cpp  motor_test4 copy.cpp  motor_test4.cpp  motor_test5.cpp  mujoco_sim.cpp  obstorviz.py  policy_code.cpp  policy_code1.cpp  policy_code2.cpp  set_active_cores.sh
src/rlcode/src/IMU/cpp/examples/ez_async_data/: CMakeLists.txt  main.cpp
src/rlcode/src/IMU/cpp/examples/getting_started/: CMakeLists.txt  main.cpp
src/rlcode/urdf/: robot_alined.urdf  robot_alined_world.urdf  robot_original.urdf  robotnl_2link_test.urdf  robotnl_left.urdf  robotnl_right.urdf  total_robot_nl.urdf
src/rlcode/urdf/meshes/: base_link.stl  left_ankle_1_1_1.stl  left_foot_1_1_1.stl  left_lower_link_1_1_1.stl  left_upper_link_1_1_1.stl  right_lower_link_1_1_1.stl  right_upper_link_1_1_1.stl  right_yaw_1_1_1.stl
src/rlcode/urdf/meshes/meshes/: base_link.stl  left_lower_link.stl  left_yaw.stl
